2008-05-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/21869
	* java/security/CodeSource.java,
	* java/security/MessageDigest.java,
	* java/security/Permission.java,
	* java/security/PermissionCollection.java,
	* java/security/ProtectionDomain.java,
	* java/security/cert/CertPath.java,
	* java/security/cert/PKIXBuilderParameters.java,
	* java/security/cert/PKIXCertPathBuilderResult.java,
	* java/security/cert/X509CRLSelector.java,
	* java/security/cert/X509CertSelector.java,
	* org/ietf/jgss/Oid.java,
	* org/omg/CORBA/portable/Delegate.java:
	Swap use of StringBuffer for CPStringBuilder.

2008-05-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/21869
	* java/beans/Statement.java,
	* java/io/File.java,
	* java/io/StreamTokenizer.java,
	* java/lang/Throwable.java,
	* java/math/BigDecimal.java,
	* java/math/BigInteger.java,
	* java/net/Inet4Address.java,
	* java/net/Inet6Address.java,
	* java/net/NetworkInterface.java,
	* java/net/SocketPermission.java,
	* java/net/URLDecoder.java,
	* java/net/URLStreamHandler.java,
	* java/nio/channels/FileLock.java,
	* java/rmi/dgc/VMID.java:
	Swap use of StringBuffer for CPStringBuilder.
	
2008-05-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR classpath/21869
	* java/awt/Component.java,
	* java/awt/Container.java,
	* java/awt/JobAttributes.java,
	* java/awt/event/ActionEvent.java,
	* java/awt/event/ComponentEvent.java,
	* java/awt/event/HierarchyEvent.java,
	* java/awt/event/InputEvent.java,
	* java/awt/event/InputMethodEvent.java,
	* java/awt/event/KeyEvent.java,
	* java/awt/event/MouseEvent.java,
	* java/awt/event/WindowEvent.java,
	* java/awt/font/TextLayout.java,
	* java/awt/image/BandedSampleModel.java,
	* java/awt/image/BufferedImage.java,
	* java/awt/image/MultiPixelPackedSampleModel.java,
	* java/awt/image/Raster.java,
	* java/awt/image/SinglePixelPackedSampleModel.java:
	Swap use of StringBuffer for CPStringBuilder.

2008-05-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>