@@ -43,6 +43,8 @@ exception statement from your version. */
 
 package java.text;
 
+import gnu.java.lang.CPStringBuilder;
+
 import java.math.BigDecimal;
 import java.math.BigInteger;
 
@@ -588,7 +590,7 @@ public class DecimalFormat extends NumberFormat
       return Double.valueOf(Double.NaN);
    
     // this will be our final number
-    StringBuffer number = new StringBuffer();
+    CPStringBuilder number = new CPStringBuilder();
     
     // special character
     char minus = symbols.getMinusSign();
@@ -1003,7 +1005,7 @@ public class DecimalFormat extends NumberFormat
    */
   private String patternChars (DecimalFormatSymbols syms)
   {
-    StringBuffer buf = new StringBuffer ();
+    CPStringBuilder buf = new CPStringBuilder ();
     
     buf.append(syms.getDecimalSeparator());
     buf.append(syms.getDigit());
@@ -1028,9 +1030,9 @@ public class DecimalFormat extends NumberFormat
    * @param patChars
    * @return A StringBuffer with special characters quoted.
    */
-  private StringBuffer quoteFix(String text, String patChars)
+  private CPStringBuilder quoteFix(String text, String patChars)
   {
-    StringBuffer buf = new StringBuffer();
+    CPStringBuilder buf = new CPStringBuilder();
     
     int len = text.length();
     char ch;
@@ -1058,7 +1060,7 @@ public class DecimalFormat extends NumberFormat
    */
   private String computePattern(DecimalFormatSymbols symbols)
   {
-    StringBuffer mainPattern = new StringBuffer();
+    StringBuilder mainPattern = new StringBuilder();
     
     // We have to at least emit a zero for the minimum number of
     // digits. Past that we need hash marks up to the grouping
@@ -1225,7 +1227,7 @@ public class DecimalFormat extends NumberFormat
   private int scanFix(String pattern, DecimalFormatSymbols sourceSymbols,
                       int start, boolean prefix)
   {
-    StringBuffer buffer = new StringBuffer();
+    CPStringBuilder buffer = new CPStringBuilder();
     
     // the number portion is always delimited by one of those
     // characters
@@ -1599,7 +1601,7 @@ public class DecimalFormat extends NumberFormat
                                    DecimalFormatSymbols sourceSymbols,
                                    int start)
   {
-    StringBuffer buffer = new StringBuffer();
+    StringBuilder buffer = new StringBuilder();
     
     // the number portion is always delimited by one of those
     // characters
@@ -2180,7 +2182,7 @@ public class DecimalFormat extends NumberFormat
     else
       {
         char zero = symbols.getZeroDigit();
-        StringBuffer _result = new StringBuffer(src);
+        CPStringBuilder _result = new CPStringBuilder(src);
         for (int i = len; i < minimumDigits; i++)
           {
             _result.append(zero);
