@@ -1,6 +1,18 @@
 2008-05-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	PR classpath/21869
+	* java/text/AttributedString.java,
+	* java/text/ChoiceFormat.java,
+	* java/text/CollationElementIterator.java,
+	* java/text/Collator.java,
+	* java/text/DecimalFormat.java,
+	* java/text/MessageFormat.java,
+	* java/text/RuleBasedCollator.java:
+	Swap use of StringBuffer for CPStringBuilder.
+
+2008-05-06  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	PR classpath/21869
 	* java/security/CodeSource.java,
 	* java/security/MessageDigest.java,
 	* java/security/Permission.java,
